--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "embla-carousel-react": "^8.3.0",
     "firebase": "^12.9.0",
     "framer-motion": "^11.18.2",
+    "html2canvas": "^1.4.1",
     "input-otp": "^1.2.4",
+    "jspdf": "^4.1.0",
     "lucide-react": "^0.453.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
